Ingress/httpd_deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: httpd-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpdapp
  template:
    metadata:
      labels: 
        app: httpdapp
    spec:
      containers:
        - name: httpdcontainer
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: httpdapp
  ports:
  - port: 81
    protocol: TCP
    targetPort: 80
  type: ClusterIP
