Ingress/nginx_deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxapp
  template:
    metadata:
      labels: 
        app: nginxapp
    spec:
      containers:
        - name: nginxcontainer
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginxapp
  ports:
  - port: 81
    protocol: TCP
    targetPort: 80
  type: ClusterIP
